minor bug fixes and added comments for readability

--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,7 @@ nav div{
     color: #000;
     margin: 0px;
 }
-#NotFound{
+#notFound{
     color: #000;
 }
 /* Misc */
